@@ -1,3 +1,9 @@
+Fri Mar  5 02:53:41 2004  Jonathan Blandford  <jrb@gnome.org>
+
+	* gtk/gtkfilechooserdefault.c (gtk_file_chooser_default_finalize):
+	Patch from Damon Chaplin to free models when we're finalized,
+	#134053
+
 2004-03-05  Alexander Larsson  <alexl@redhat.com>
 
 	* gtk/gtkfilesystem.c (gtk_file_system_get_volume_for_path):
